--- a/docker/strongswan/Dockerfile.vpp
+++ b/docker/strongswan/Dockerfile.vpp
@@ -5,9 +5,7 @@ COPY startstrongswan.sh /
 COPY startvpp.sh /
 COPY startup.conf /etc/vpp/startup.conf
 
-RUN yum -y install epel-release && \
-    yum -y install strongswan tcpdump && \
-    yum clean all && \
-    rm -rf /var/cache/yum
+RUN apt-get -y install strongswan tcpdump && \
+    apt-get clean all
 
 ENTRYPOINT /startvpp.sh
