--- a/docker/vppvpn/Dockerfile.strongswan
+++ b/docker/vppvpn/Dockerfile.strongswan
@@ -4,10 +4,9 @@ MAINTAINER mestery@mestery.com
 ARG STRONGSWAN_REPO_URL
 ARG STRONGSWAN_COMMIT
 
-RUN yum -y install epel-release socat iperf tcpdump gmp-devel gperftools-devel gperftools-libs gperftools gperf && \
-    yum -y group install "Development Tools" && \
-    yum clean all && \
-    rm -rf /var/cache/yum && \
+RUN apt-get -y install socat iperf tcpdump libgmp3-dev google-perftools libgoogle-perftools-dev libgoogle-perftools4 gperf && \
+    apt-get -y install build-essential git autoconf libtool && \
+    apt-get clean all && \
     git clone ${STRONGSWAN_REPO_URL} && \
     cd strongswan && \
     git fetch && \
