--- a/docker/cups-vppvpn/Dockerfile.cupsserver
+++ b/docker/cups-vppvpn/Dockerfile.cupsserver
@@ -1,5 +1,5 @@
-FROM vpp-container-fun/vppvpnbase
-MAINTAINER mestery@mestery.com
+FROM vpp-strongswan-docker/vppvpnbase
+MAINTAINER giles@layerfree.net
 
 COPY startvpp.sh /
 COPY startup.conf /etc/vpp/startup.conf
