--- a/docker/cups-vppvpn/Dockerfile.ipsecclient
+++ b/docker/cups-vppvpn/Dockerfile.ipsecclient
@@ -1,5 +1,5 @@
-FROM vpp-container-fun/vppvpnbase
-MAINTAINER mestery@mestery.com
+FROM vpp-strongswan-docker/vppvpnbase
+MAINTAINER giles@layerfree.net
 
 COPY startvpnclient.sh /
 
