--- a/docker/ha-scale-vpn/Dockerfile.ha-vpnserver-1
+++ b/docker/ha-scale-vpn/Dockerfile.ha-vpnserver-1
@@ -1,5 +1,5 @@
-FROM vpp-container-fun/ha-scale-strongswan
-MAINTAINER mestery@mestery.com
+FROM vpp-strongswan-docker/ha-scale-strongswan
+MAINTAINER giles@layerfree.net
 
 COPY startstrongswan1.sh /
 COPY dummystart.sh /
