--- a/docker/multiple/Dockerfile.vpp2
+++ b/docker/multiple/Dockerfile.vpp2
@@ -1,5 +1,5 @@
-FROM vpp-container-fun/base
-MAINTAINER mestery@mestery.com
+FROM vpp-strongswan-docker/base
+MAINTAINER giles@layerfree.net
 
 COPY startvpp2.sh /
 COPY startup2.conf /etc/vpp/startup2.conf
