--- a/docker/strongswan/Dockerfile.vpp
+++ b/docker/strongswan/Dockerfile.vpp
@@ -1,5 +1,5 @@
-FROM vpp-container-fun/base
-MAINTAINER mestery@mestery.com
+FROM vpp-strongswan-docker/base
+MAINTAINER giles@layerfree.net
 
 COPY startstrongswan.sh /
 COPY startvpp.sh /
