--- a/docker/vppvpn/Dockerfile.vpnclient
+++ b/docker/vppvpn/Dockerfile.vpnclient
@@ -1,5 +1,5 @@
-FROM vpp-container-fun/vppvpnbase
-MAINTAINER mestery@mestery.com
+FROM vpp-strongswan-docker/vppvpnbase
+MAINTAINER giles@layerfree.net
 
 COPY startvpnclient.sh /
 
