--- a/docker/vppvpn/Dockerfile.vpnserver
+++ b/docker/vppvpn/Dockerfile.vpnserver
@@ -1,5 +1,5 @@
-FROM vpp-container-fun/vppvpnbase
-MAINTAINER mestery@mestery.com
+FROM vpp-strongswan-docker/vppvpnbase
+MAINTAINER giles@layerfree.net
 
 COPY startstrongswan.sh /
 COPY startvpp.sh /
